test/tests/operators/from_http/from_http_error_encode_without_body.txt
error: encoding specified without a `body`
 --> tests/operators/from_http/from_http_error_encode_without_body.tql:5:51
  |
5 | from_http "https://example.org/data.json", encode="json" {
  |                                                   ^^^^^^ 
  |
